--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <!-- Header -->
     <header>
-        <nav class="navbar navbar-expand-lg     navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg     navbar-light bg-light fixed-top">
             <div class="container">
                 <a class="navbar-brand" href="#">
                     <img src="./images/logo.png" alt="" class="d-inline-block align-text-top">
@@ -27,13 +27,13 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="#">Shoes</a>
+                    <a class="nav-link" href="#shoes">Shoes</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="#">Backpack</a>
+                    <a class="nav-link" href="#bags">Backpack</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="#">Subscribe</a>
+                    <a class="nav-link" href="#subs">Subscribe</a>
                     </li>
                 </ul>
                 </div>
@@ -125,7 +125,7 @@
         </section>
 
         <!-- Shoes -->
-        <section class="container">
+        <section class="container" id="shoes">
             <h2 class="mb-4">Shoes</h2>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
@@ -168,7 +168,7 @@
         </section>
         
         <!-- Bags -->
-        <section class="container my-5">
+        <section class="container my-5" id="bags">
             <h2 class="mb-4">BackPack</h2>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
@@ -211,7 +211,7 @@
         </section>
 
         <!-- Subscribe -->
-        <section style="height: 300px;" class="container d-flex justify-content-center align-items-center bg-info rounded-3">
+        <section style="height: 300px;" class="container d-flex justify-content-center align-items-center bg-info rounded-3" id="subs">
             <div>
                 <h1>LET'S STAY IN TOUCH</h1>
                 <p>Get updates on sales, specials and more</p>
