--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-    <title>Hello, world!</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
+    <title>Panda E-commerce Company</title>
   </head>
   <body>
     <!-- Header -->
@@ -45,12 +46,12 @@
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <div class="row bg-info bg-gradient d-flex align-items-center p-5">
+                        <div class="row panda-bg-info bg-gradient d-flex align-items-center p-5">
                             <div class="col-lg-7">
                                 <h1>Cool Dude Headphones</h1>
                                 <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
                                 <h1>$420</h1>
-                                <button class="btn btn-warning">BUY NOW</button>
+                                <button class="btn panda-buy-btn">BUY NOW</button>
                             </div>
                             <div class="col-lg-5">
                                 <img src="./images/banner-images/headphone.png" class="d-block w-100" alt="...">
@@ -58,12 +59,12 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                    <div class="row bg-info bg-gradient d-flex align-items-center p-5">
+                    <div class="row panda-bg-info d-flex align-items-center p-5">
                             <div class="col-lg-7">
                                 <h1>Mega LCD TV For Sports</h1>
                                 <p>This is the best tv in the world for people who just want to waste time in front of tv.</p>
                                 <h1>$1420</h1>
-                                <button class="btn btn-warning">BUY NOW</button>
+                                <button class="btn panda-buy-btn">BUY NOW</button>
                             </div>
                             <div class="col-lg-5">
                                 <img src="./images/banner-images/tv.png" class="d-block w-100" alt="...">
@@ -71,12 +72,12 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                    <div class="row bg-info bg-gradient d-flex align-items-center p-5">
+                    <div class="row panda-bg-info d-flex align-items-center p-5">
                             <div class="col-lg-7">
                                 <h1>X-Box for your living room</h1>
                                 <p>This is the best x-box in the world for people who just want to waste time in front of fake sports.</p>
                                 <h1>$620</h1>
-                                <button class="btn btn-warning">BUY NOW</button>
+                                <button class="btn panda-buy-btn">BUY NOW</button>
                             </div>
                             <div class="col-lg-5">
                                 <img src="./images/banner-images/xbox.png" class="d-block w-100" alt="...">
@@ -101,22 +102,22 @@
     <!-- Main Body Star -->
 
     <main>
-        <section class="container my-5">
+        <section class="container my-5 catagories">
             <div class="row g-4">
                 <div class="col-lg-4 col-md-12 col-12">
-                    <div class="p-3 border bg-warning d-flex align-items-center justify-content-between rounded-3">
+                    <div class="p-3 border d-flex align-items-center justify-content-between rounded-3" style="background-color: #ffa500;">
                         <h1 class="text-white">Watch</h1>
                         <img src="./images/categories/watch.png" alt="">
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-12 col-12">
-                    <div class="p-3 border bg-success d-flex align-items-center justify-content-between rounded-3">
+                    <div class="p-3 border bg-success d-flex align-items-center justify-content-between rounded-3" style="background-color: #da70d6;">
                         <h1 class="text-white">Backpack</h1>
                         <img src="./images/categories/bag.png" alt="">
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-12 col-12">
-                    <div class="p-3 border bg-primary d-flex align-items-center justify-content-between rounded-3">
+                    <div class="p-3 border bg-primary d-flex align-items-center justify-content-between rounded-3" style="background-color: #0000ff;">
                         <h1 class="text-white">Shoes</h1>
                         <img src="./images/categories/shoes.png" alt="">
                     </div>
@@ -136,7 +137,7 @@
                             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
                         </div>
                         <div class="card-footer border-0">
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="btn panda-buy-btn">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -148,7 +149,7 @@
                             <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
                         </div>
                         <div class="card-footer border-0">
-                            <div class="btn btn btn-warning">Buy Now</div>
+                            <div class="btn btn panda-buy-btn">Buy Now</div>
                         </div>
                     </div>
                 </div>
@@ -160,7 +161,7 @@
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional.</p>
                         </div>
                         <div class="card-footer border-0">
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="btn panda-buy-btn">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -179,7 +180,7 @@
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                         </div>
                         <div class="card-footer border-0">
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="btn panda-buy-btn">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -191,7 +192,7 @@
                             <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
                         </div>
                         <div class="card-footer border-0">
-                            <div class="btn btn btn-warning">Buy Now</div>
+                            <div class="btn btn panda-buy-btn">Buy Now</div>
                         </div>
                     </div>
                 </div>
@@ -203,7 +204,7 @@
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
                         </div>
                         <div class="card-footer border-0">
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="btn panda-buy-btn">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -211,12 +212,12 @@
         </section>
 
         <!-- Subscribe -->
-        <section style="height: 300px;" class="container d-flex justify-content-center align-items-center bg-info rounded-3" id="subs">
+        <section style="height: 300px;" class="container d-flex justify-content-center align-items-center panda-bg-info rounded-3" id="subs">
             <div>
                 <h1>LET'S STAY IN TOUCH</h1>
                 <p>Get updates on sales, specials and more</p>
-                <input type="text" placeholder="Your Email"> <br>
-                <button class="btn btn-warning">Submit</button>
+                <input class="form-control" type="text" placeholder="Your Email"> <br>
+                <button class="btn panda-buy-btn">Submit</button>
             </div>
         </section>
     </main>
